--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,12 @@
     </repositories>
 
     <build>
-        <finalName>eap-galleon-rs</finalName>
-        <plugins>
+        <finalName>jee-traditional</finalName>
+        <plugins> <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.4.0</version>
+        </plugin>
             <plugin>
                 <groupId>org.jboss.eap.plugins</groupId>
                 <artifactId>eap-maven-plugin</artifactId>
@@ -74,9 +78,6 @@
                             <location>org.jboss.eap.cloud:eap-cloud-galleon-pack</location>
                         </feature-pack>
                     </feature-packs>
-                    <layers>
-                        <layer>jaxrs-server</layer>
-                    </layers>
                     <runtime-name>ROOT.war</runtime-name>
                 </configuration>
                 <executions>
